--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -24,5 +24,11 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/btn_fragment1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="olakase" />
     </LinearLayout>
 </FrameLayout>
